--- a/src/Bookstore.Service/Localization/en.po
+++ b/src/Bookstore.Service/Localization/en.po
@@ -1,3 +1,3 @@
 ﻿msgctxt "Rhetos"
 msgid "It is not allowed to enter {0} because the required property {1} is not set."
-msgstr "Nije dozvoljen unos zapisa {0} jer polje {1} nije zadano."
+msgstr "It is not allowed to enter {0} with empty field {1}. (customized message)"
